[project]
name = "stjoseph"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Colfin", email = "robert.m.colfin@gmail.com"},
]
readme = "README.md"
license = {text = "Apache"}
requires-python = "<4.0,>=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "catholic",
    "daily",
    "readings",
    "scripture",
    "usccb",
]
dependencies = [
    "google-auth<3.0.0,>=2.38.0",
    "google-api-python-client<3.0.0,>=2.161.0",
    "google-auth-oauthlib<2.0.0,>=1.2.1",
    "asyncclick<9.0.0,>=8.1.8",
    "backoff<3.0.0,>=2.2.1",
    "catholic-mass-readings<1.0.0,>=0.4.3",
    "jinja2<4.0.0,>=3.1.5",
    "python-dateutil<3.0.0.0,>=2.9.0.post0",
    "pytz<2025.0,>=2024.2",
]

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.15.0",
    "ruff<1.0.0,>=0.9.7",
    "pytest<9.0.0,>=8.3.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-ruff<1.0.0,>=0.4.1",
    "pytest-mypy<1.0.0,>=0.10.3",
    "types-pytz<2026.0.0.0,>=2025.1.0.20250204",
    "types-python-dateutil<3.0.0.0,>=2.9.0.20241206",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --mypy --ruff --ruff-format"

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "RUF"
]
ignore = [
  "FBT002",
  "FBT001",
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038" # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
